// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HttpHeadersValidator validate() spec is present header is not present spec defines it as required returns validation error 1`] = `
Array [
  Object {
    "code": "required",
    "message": "should have required property 'aheader'",
    "path": Array [
      "header",
    ],
    "severity": 0,
  },
]
`;

exports[`HttpHeadersValidator validate() spec is present header is present deprecated flag is set returns deprecation warning 1`] = `
Array [
  Object {
    "code": "deprecated",
    "message": "Header param x-test-header is deprecated",
    "path": Array [
      "header",
      "x-test-header",
    ],
    "severity": 1,
  },
]
`;
